--- a/Develop/index.html
+++ b/Develop/index.html
@@ -28,7 +28,7 @@
     </header>
     <div class="hero"></div>
     <main class="content">
-        <div id="search-engine-optimization" class="search-engine-optimization">
+        <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left"
                 alt="notebook displaying company optimization techniques " />
             <h2>Search Engine Optimization</h2>
@@ -37,8 +37,8 @@
                 travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
                 your visibility and find the right customers for your business.
             </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
+        </section>
+        <section id="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right"
                 alt="laptop displaying rise in reputation" />
             <h2>Online Reputation Management</h2>
@@ -47,8 +47,8 @@
                 internet connection to say whatever they want about your business. Online Reputation Management gives
                 you the control over what potential customers see when they search for your business.
             </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
+        </section>
+        <section id="social-media-marketing" class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left"
                 alt="table with social media buzzwords like like,share,tweet" />
             <h2>Social Media Marketing</h2>
@@ -57,10 +57,10 @@
                 determine which platforms are suited to your brand, using analytics to find the right markets and
                 increase your lead generation.
             </p>
-        </div>
+        </section>
     </main>
     <aside class="benefits">
-        <adiv class="benefit-lead">
+        <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="lead generation gear turning into money" />
             <p>
